# coder-dojo-common-python

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-publish.yml  install-package.yml  on-pr-lint.yml
coder_dojo_common/: __init__.py  cli.py  kenney_assets.py  models.py  settings.py
tests/local_workflows/: README.md  act.Dockerfile  run_act.sh  runner.Dockerfile
