[tool.poetry]
name = "coder-dojo-common"
version = "0.0.0"
description = "Common packages for coder dojo sessions"
authors = ["Stedders <3862686+Stedders@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "coder_dojo_common" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pygame = { version = "^2.1.2", optional = true }
numpy = { version = "^1.24.1", optional = true }
jupyterlab = { version = "^3.5.2", optional = true }
pandas = { version = "^1.5.2", optional = true }
click = "^8.1.3"
pydantic = "^1.10.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"

[tool.poetry.extras]
data = ["jupyterlab", "numpy", "pandas"]
games = ["pygame"]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
kenney-assets = "coder_dojo_common.cli:kenney"