[tool.poetry]
name = "coder-dojo-common"
version = "0.0.2.post3.dev0+aa8b339"
description = "Common packages for coder dojo sessions"
authors = ["Stedders <3862686+Stedders@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "coder_dojo_common" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
colorama = "^0.4.6"
pydantic = "^1.10.4"
requests = "^2.28.2"
jupyterlab = { version = "^3.5.2", optional = true }
matplotlib = {version = "^3.6.3", optional = true}
numpy = { version = "^1.24.1", optional = true }
pandas = { version = "^1.5.2", optional = true }
pgzero = {version = "^1.2.1", optional = true}
plotly = {version = "^5.12.0", optional = true}
pygame = { version = "^2.1.2", optional = true }

[tool.poetry.extras]
data = ["jupyterlab", "matplotlib", "numpy", "pandas", "plotly"]
games = ["pgzero", "pygame"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = false

[tool.poetry.scripts]
kenney-assets = "coder_dojo_common.cli:kenney"